syntax = "proto3";

package pb;

import "common.proto";

option java_package = "github.com.evazca";

service Agent {
    rpc prepare (prepareReq) returns (prepareResp) {}
    rpc revoke (revokeReq) returns (revokeResp) {}
    rpc networkOperate(networkOperateReq) returns (networkOperateResp) {}
    rpc revokeNetworkOperate (revokeNetworkOperateReq) returns (revokeNetworkOperateResp) {}
}


message prepareReq {
    string id = 1;
}

message prepareResp {
    commonResp commonResp = 1;
}

message revokeReq {
    string id = 1;
    bool force = 2;
}

message revokeResp {
    commonResp commonResp = 1;
}

message networkOperateReq {
    string id = 1;
    networkOperateMark networkOperateMark = 2;
}

message networkOperateResp {
    commonResp commonResp = 1;
    int32 mark = 2;
}

message revokeNetworkOperateReq {
    string id = 1;
    int32 mark = 2;
}


message revokeNetworkOperateResp {
    commonResp commonResp = 1;
}

